crates/keron-lang/tests/corpus/errors/check/pattern_guard_non_exhaustive.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: non-exhaustive `match` on `OsType`: missing `"Linux"`, `"Macos"`, `"Windows"`, `"Unknown"`
  --> 4:23
  |
4 | val x: String = match os_type() {
  |                       ^^^^^^^^^^
